--- a/index/templates/login_signup.html
+++ b/index/templates/login_signup.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" id="login-signup">
   <div class="col-12"id="splash-top">
     <h4>
       Search for and listen to thousands of free podcasts on<br /><strong>dopepod</strong>
@@ -40,7 +40,7 @@
             Remember me
           </label>
         </div>
-        <a class="password-link" href="/account/password/reset/">Forgot Password?</a>
+        <a class="password-link" href="/account/password/reset/">Forgot Password? (Don't click)</a>
       </form>
     </div>
   </div>
