--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block center-stage %}
-<div class="row">
+<div class="row" id="podinfo">
   <div class="col-4 col-md-3 col-lg-2 pb-0" id="podinfo-side">
     <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}350x350bb.jpg" />
     <ul id="podinfo-side-list">
