--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -1,14 +1,14 @@
-<div class="col-auto col-md-4">
+<div class="col-3 col-md-4">
   <a class="nav-link navbar-toggler" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <i class="fas fa-bars"></i>
   </a>
   <div class="dropdown-menu navbar-dropdown" aria-labelledby="navbarDropdownMenuLink">
     <ul class="nav nav-fade d-block">
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link blog-link" href="#">
           Blog
         </a>
-      </li>
+      </li> -->
       <li class="nav-item">
         <a class="nav-link browse-link" href="{% url 'browse' %}">
           Browse
@@ -20,35 +20,35 @@
           Subscriptions
         </a>
       </li>
-      {% endif %}
       <li class="nav-item">
         <a class="nav-link settings-link" href="{% url 'settings' %}">
           Settings
         </a>
       </li>
+      {% endif %}
     </ul>
   </div>
   <ul class="nav nav-fade">
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link blog-link d-none d-md-block" href="#">
         Blog
       </a>
-    </li>
+    </li> -->
     <li class="nav-item">
       <a class="nav-link browse-link d-none d-md-block" href="{% url 'browse' %}">
         Browse
       </a>
     </li>
     {% if user.is_authenticated %}
+    {% endif %}
     <li class="nav-item">
       <a class="nav-link subscriptions-link d-none d-md-block" href="{% url 'subscriptions' %}">
         Subscriptions
       </a>
     </li>
-    {% endif %}
   </ul>
 </div>
-<div class="col-auto col-md-4" id="logo" >
+<div class="col-6 col-md-4" id="logo" >
   <a class="index-link" href="{% url 'index' %}">
     <span class="x a">
       d
@@ -73,7 +73,7 @@
     </span>
   </a>
 </div>
-<div class="col-auto col-md-4">
+<div class="col-3 col-md-4">
   <ul class="nav nav-fade">
     {% if user.is_authenticated %}
     <li class="nav-item ml-auto">
@@ -91,15 +91,15 @@
     </li>
     {% else %}
     <li class="nav-item ml-auto">
-      <a class="nav-link ajax-register d-none d-md-block" href="{% url 'account_signup' %}">
+      <a class="nav-link ajax-register d-none d-md-block" href="/?reg=yeah">
         Register
       </a>
-      <a class="nav-link ajax-login d-block d-md-none" href="{% url 'account_login' %}">
+      <a class="nav-link ajax-login d-block d-md-none" href="{% url 'index' %}">
         <i class="fas fa-sign-in-alt"></i>
       </a>
     </li>
     <li class="nav-item d-none d-md-block">
-      <a class="nav-link ajax-login" href="{% url 'account_login' %}">
+      <a class="nav-link ajax-login" href="{% url 'index' %}">
         Login
       </a>
     </li>
