--- a/podcasts/templates/dashboard.html
+++ b/podcasts/templates/dashboard.html
@@ -10,7 +10,7 @@
       </a>
     </p>
     <p>
-      You have no playlist (because it hasn't been implemented yet)
+      You have no playlist
     </p>
   </div>
 </div>
