--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -6,7 +6,7 @@
 
 {% block center-stage %}
 <div class="row" id="podinfo">
-  <div class="col-4 col-md-3 col-lg-2 pb-0" id="podinfo-side">
+  <div class="col-4 col-md-3 col-lg-2" id="podinfo-side">
     <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}350x350bb.jpg" />
     <ul id="podinfo-side-list">
       <li>
@@ -57,7 +57,7 @@
       </li>
     </ul>
   </div>
-  <div class="col-8 col-md-9 col-lg-10 pl-0 pb-0" id="podinfo-main">
+  <div class="col-8 col-md-9 col-lg-10" id="podinfo-main">
     <h5 id="podinfo-title">
       {{ podcast.title }}
     </h5>
