--- a/index/static/style.css
+++ b/index/static/style.css
@@ -365,7 +365,7 @@ body {
   height: 400px;
 }
 #login-wrapper {
-  
+
   background: #ddd;
   padding: 10px;
   width: 250px;
@@ -406,6 +406,7 @@ body {
   padding-top: 15px;
   padding-bottom: 0;
   padding-left: 0;
+  max-height: 350px;
 }
 #podinfo-side {
   padding-top: 15px;
@@ -433,15 +434,12 @@ body {
   -webkit-line-clamp: 2;
 }
 #podinfo-artist {
-
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 #podinfo-description {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  max-height: 200px;
 }
 #episodes-wrapper {
   border: 1px solid #e6ecf0;
@@ -502,17 +500,12 @@ body {
 }
 .result-title, .result-title:hover {
   overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2; /* number of lines to show */
+  max-height: 35px;
 }
 .result-artist, .result-artist:hover {
-  overflow: hidden;
   text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2; /* number of lines to show */
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .browse-results-list {
