--- a/index/templates/account/signup.html
+++ b/index/templates/account/signup.html
@@ -1,29 +1,1 @@
-{% extends request.is_ajax|yesno:'ajax.html,index/index.html' %}
-
-{% load i18n %}
-
-{% block title %}
-register
-{% endblock %}
-
-{% block center-stage %}
-<div class="container">
-  <div class="row">
-    <div class="col">
-    </div>
-    <div class="col-auto">
-      <h1>{% trans "Sign Up" %}</h1>
-
-      <p>{% blocktrans %}Already have an account? Then please <a class="login-link" href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-
-      <form class="signup-form" method="POST" action="{% url 'account_signup' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-      </form>
-    </div>
-    <div class="col">
-    </div>
-  </div>
-</div>
-{% endblock %}
+{{ form.errors }}
