--- a/index/templates/account/login.html
+++ b/index/templates/account/login.html
@@ -1,49 +1,1 @@
-{% extends request.is_ajax|yesno:'ajax.html,index/index.html' %}
-
-{% load i18n %}
-{% load account socialaccount %}
-
-{% block title %}
-login
-{% endblock %}
-
-{% block center-stage %}
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-auto">
-      <h1>{% trans "Sign In" %}</h1>
-
-      {% get_providers as socialaccount_providers %}
-
-      {% if socialaccount_providers %}
-      <p>{% blocktrans with site.name as site_name %}Please sign in with one
-      of your existing third party accounts. Or, <a class="signup-link" href="{{ signup_url }}" >sign up</a>
-      for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
-
-      <div class="socialaccount_ballot">
-
-        <ul class="socialaccount_providers">
-          {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-        </ul>
-
-        <div class="login-or">{% trans 'or' %}</div>
-
-      </div>
-
-      {% include "socialaccount/snippets/login_extra.html" %}
-
-      {% else %}
-      <p>{% blocktrans %}If you have not created an account yet, then please
-      <a class="signup-link" href="{{ signup_url }}" >sign up</a> first.{% endblocktrans %}</p>
-      {% endif %}
-
-      <form class="login-form" method="POST" action="{% url 'account_login' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <a class="password-link" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-        <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
-      </form>
-    </div>
-  </div>
-</div>
-{% endblock %}
+{{ form.errors }}
