--- a/index/templates/login_signup.html
+++ b/index/templates/login_signup.html
@@ -11,11 +11,13 @@
       <div class="collapse login-signup-collapse show" id="login-collapse">
     {% endif %}
       <div id="login-wrapper">
+        <div id="login-errors">
+        </div>
         Log In
         <span>
           or
         </span>
-        <button class="btn btn-outline-primary" type="button" data-toggle="collapse" data-target=".login-signup-collapse" aria-expanded="false" aria-controls="login-collapse signup-collapse">
+        <button class="btn btn-outline-primary login-signup-toggle" type="button" data-toggle="collapse" data-target=".login-signup-collapse" aria-expanded="false" aria-controls="login-collapse signup-collapse">
           Sign Up
         </button>
         <form class="login-form" method="POST" action="{% url 'account_login' %}">
@@ -49,7 +51,9 @@
       <div class="collapse login-signup-collapse" id="signup-collapse">
     {% endif %}
       <div id="login-wrapper">
-        <button class="btn btn-outline-primary" type="button" data-toggle="collapse" data-target=".login-signup-collapse" aria-expanded="false" aria-controls="login-collapse signup-collapse">
+        <div id="signup-errors">
+        </div>
+        <button class="btn btn-outline-primary login-signup-toggle" type="button" data-toggle="collapse" data-target=".login-signup-collapse" aria-expanded="false" aria-controls="login-collapse signup-collapse">
           Log In
         </button>
         <span>
