--- a/index/templates/login_signup.html
+++ b/index/templates/login_signup.html
@@ -32,7 +32,7 @@
               <input class="form-control" type="password" name="password" placeholder="Password" required="" id="login-password">
             </div>
             <div class="col-auto">
-              <button type="submit" class="btn btn-outline-primary">Sign In</button>
+              <button type="submit" class="btn btn-outline-primary">Log In</button>
             </div>
           </div>
           <div class="form-check">
